add Organizer and Context classes

--- a/LightServiceTest/LightServiceTest.csproj
+++ b/LightServiceTest/LightServiceTest.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>9c448d59-b4bb-4a86-8578-59ad56250241</ProjectGuid>
+    <ProjectGuid>{C9F2DE4B-777B-474C-8589-E20D647EE668}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LightServiceTest</RootNamespace>
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="OrganizerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LightService\LightService.csproj">
+      <Project>{fb9a0272-554f-40b1-9881-d097763ab833}</Project>
+      <Name>LightService</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
