--- a/LightServiceTest/LightServiceTest.csproj
+++ b/LightServiceTest/LightServiceTest.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ContextTest.cs" />
     <Compile Include="OrganizerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
