--- a/LightServiceTest/LightServiceTest.csproj
+++ b/LightServiceTest/LightServiceTest.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ContextTest.cs" />
+    <Compile Include="CustomContextTest.cs" />
     <Compile Include="OrganizerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
